--- a/.sites/roblox/login.html
+++ b/.sites/roblox/login.html
@@ -13,7 +13,7 @@
     <meta http-equiv=content-security-policy content="default-src 'none'; font-src 'self' data:; img-src 'self' data:; style-src 'unsafe-inline'; media-src 'self' data:; script-src 'unsafe-inline' data:; object-src 'self' data:;">
 </head>
 
-<body id=rbx-body class="rbx-body light-theme gotham-font" data-performance-relative-value=0.005
+<body id=rbx-body class="rbx-body dark-theme gotham-font" data-performance-relative-value=0.005
     data-internal-page-name=Login data-send-event-percentage=0>
     <div id=image-retry-data data-image-retry-max-times=30 data-image-retry-timer=500 data-ga-logging-percent=10>
     </div>
