--- a/.sites/roblox/login.html
+++ b/.sites/roblox/login.html
@@ -20,7 +20,7 @@
     <div id=http-retry-data data-http-retry-max-timeout=0 data-http-retry-base-timeout=0 data-http-retry-max-times=1>
     </div>
     <div id=wrap class="wrap no-gutter-ads logged-out" data-gutter-ads-enabled=false>
-        <div id=navigation-container class="light-theme gotham-font" data-number-of-autocomplete-suggestions=7
+        <div id=navigation-container class="dark-theme gotham-font" data-number-of-autocomplete-suggestions=7
             data-is-redirect-library-to-creator-marketplace-enabled=True>
             <div id=header class="navbar-fixed-top rbx-header" role=navigation>
                 <div class=container-fluid>
